Bug 365234, scrolled items in listbox are invisible, r+sr=roc